# Minigame_Collection

./: CMakeLists.txt  Doxyfile  README.md  main.cpp
Minigames/Testgame/: test.cpp  test.hpp
core/header/: debug.hpp  definitions.hpp  game.hpp  gameUtilities.hpp  texture.hpp
core/source/: game.cpp  gameUtilities.cpp  texture.cpp
docs/: CMakeCCompilerId_8c.html  CMakeCCompilerId_8c_source.html  CMakeCXXCompilerId_8cpp.html  CMakeCXXCompilerId_8cpp_source.html  README_8md.html  README_8md_source.html  annotated.html  annotated_dup.js  classes.html  classgame-members.html  classgame.html  classgame.js  classgamePreview-members.html  classgamePreview.html  classgamePreview.js  classgamePreview__coll__graph.map  classgamePreview__coll__graph.md5  classgame__coll__graph.map  classgame__coll__graph.md5  classgame__inherit__graph.map  classgame__inherit__graph.md5  classgame_a8fedf23a5fe4329f1f05758e26d58319_icgraph.map  classgame_a8fedf23a5fe4329f1f05758e26d58319_icgraph.md5  classgame_afd16ddc6a279481142319631373d6376_icgraph.map  classgame_afd16ddc6a279481142319631373d6376_icgraph.md5  classmenue-members.html  classmenue.html  classmenue.js  classmenue__coll__graph.map  classmenue__coll__graph.md5  classmenue_a064341a0a73c16ec686b7958d527dcdb_cgraph.map  classmenue_a064341a0a73c16ec686b7958d527dcdb_cgraph.md5  classmenue_a064341a0a73c16ec686b7958d527dcdb_icgraph.map  classmenue_a064341a0a73c16ec686b7958d527dcdb_icgraph.md5  classmenue_a1044413c9f875522539864a6e173040b_cgraph.map  classmenue_a1044413c9f875522539864a6e173040b_cgraph.md5  classmenue_a1044413c9f875522539864a6e173040b_icgraph.map  classmenue_a1044413c9f875522539864a6e173040b_icgraph.md5  classmenue_a3e7219c43d17aa5ecb225203e6802fea_cgraph.map  classmenue_a3e7219c43d17aa5ecb225203e6802fea_cgraph.md5  (+194 more)
docs/search/: all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  (+38 more)
menue/: menue.cpp  menue.hpp
(+10 files in other folders)
